Fixed compile errors in modules